--- a/sellerhome.css
+++ b/sellerhome.css
@@ -1,11 +1,11 @@
-@font-face {
+/* @font-face {
     font-family: "IBM Plex Sans Roman";
     src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/85648/IBMPlexSansVar-Roman.ttf");
 }
 
 * {
     box-sizing: border-box;
-}
+} */
 
 body {
 
@@ -156,27 +156,7 @@ h1:hover span {
 
 }
 
-@media (min-width: 697px) and (1079px) {
-    .sidebar {
-        width: 100%;
 
-        height: auto;
-
-        position: relative;
-
-        top: 0;
-
-        bottom: auto;
-
-        transform: translateX(-100%);
-
-    }
-
-    .sidebar.open {
-        transform: translateX(0);
-
-    }
-}
 
 
 @media (max-width: 696px) {
